<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4CBCB"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#786B69"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/design_default_color_secondary_variant"
            android:elevation="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ava1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/name1"
                    android:src="@drawable/boy" />

                <TextView
                    android:id="@+id/IdaBagus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava1"
                    android:text="@string/name1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/nimBagus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/IdaBagus"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava1"
                    android:text="@string/nim1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nimBagus"
                    android:layout_toEndOf="@+id/ava1"
                    android:text="@string/prod1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_margin="20dp"

            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp">
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="20dp"-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ava2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/name2"
                    android:src="@drawable/girl" />

                <TextView
                    android:id="@+id/ErinaD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava2"
                    android:text="@string/name2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/nimErina"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ErinaD"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/ava2"
                    android:text="@string/nim2"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nimErina"
                    android:layout_toEndOf="@+id/ava2"
                    android:text="@string/prod1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Engelbert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava3"
                    android:text="@string/name3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/nimEngelbert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Engelbert"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava3"
                    android:text="@string/nim3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nimEngelbert"
                    android:layout_toEndOf="@+id/ava3"
                    android:text="@string/prod1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/ava3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/name3"
                    android:src="@drawable/boy" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Novita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava4"
                    android:text="@string/name4"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/nimNovita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Novita"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava4"
                    android:text="@string/nim4"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nimNovita"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava4"
                    android:text="@string/prod1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/ava4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/name4"
                    android:src="@drawable/girl" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Michel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava5"
                    android:text="@string/name5"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/nimMichel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Michel"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava5"
                    android:text="@string/nim5"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nimMichel"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava5"
                    android:text="@string/prod1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <ImageView
                    android:id="@+id/ava5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/name5"
                    android:src="@drawable/girl" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardElevation="10dp"
            card_view:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ava6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/name6"
                    android:src="@drawable/boy" />

                <TextView
                    android:id="@+id/WisnuAdi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava6"
                    android:text="@string/name6"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/nimAdi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/WisnuAdi"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/ava6"
                    android:text="@string/nim6"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nimAdi"
                    android:layout_toEndOf="@+id/ava6"
                    android:text="@string/prod1"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>